--- a/EE_Web/src/whitefeather/xedge/appconfig/Locators.properties
+++ b/EE_Web/src/whitefeather/xedge/appconfig/Locators.properties
@@ -4,31 +4,31 @@
 base_url=http://extraaedgev2.azurewebsites.net/
 
 #API Data Access
-staging_apilogin_url http\://internalpoc.extraaedge.com\//token
-staging_login_credentials=clientId=248CEB3C-5360-437A-831D-AA7E144DCC50&username=shekharb@theextraaedge.com&password=test
-staging_login_clientId=248CEB3C-5360-437A-831D-AA7E144DCC50&
-staging_login_username=shekharb@theextraaedge.com&
-staging_login_password=test
+APILogin http\://internalpoc.extraaedge.com\//token
+APILogin_Credentials=clientId=248CEB3C-5360-437A-831D-AA7E144DCC50&username=shekharb@theextraaedge.com&password=test
+APILogin_ClientId=248CEB3C-5360-437A-831D-AA7E144DCC50&
+APILogin_Username=shekharb@theextraaedge.com&
+APILogin_Password=test
 
-staging_dashboard_countAPI=http://internalpoc.extraaedge.com/api/leads/DashboardCount/
-staging_leadlist_countAPI=https://internalpoc.extraaedge.com/api/leads/leadlistcount/
+Dashboard_CountAPI=http://internalpoc.extraaedge.com/api/leads/DashboardCount/
+Leadlist_CountAPI=https://internalpoc.extraaedge.com/api/leads/leadlistcount/
 staging_leadlist_dataAPI=https://internalpoc.extraaedge.com/api/leads/List?statusid=7&referredtoid=6
 
 	
 
 #Login Page Locators
-staging_username_inputfield=xpath://*[@id='userName']
-staging_password_inputfield=xpath://*[@id='password']
-staging_loginButton_xpath=xpath://*[@id='btnLogin']
-staging_loginpage_backgroundImage=xpath://div[@class='login-background']
-staging_loginpage_usernamePlaceholder=xpath:.//*[@placeholder='Usernames']
-staging_loginpage_passwordPlaceholder=xpath:.//*[@placeholder='Password']
-staging_loginpage_accountlogo=xpath:.//img[contains(@src,'loginlogo.png')]
-staging_loginpage_forgotpassword:css:.forgot-link
-staging_loginpage_rememberme:css:.custom-check-box>label
-staging_loginpage_usernameLabel=xpath:.//label[contains(.,'Username')]
-staging_loginpage_passwordLabel=xpath:.//label[contains(.,'Password')]
-staging_password_wrapper=xpath:.//img[contains(@src,'eye')]
+LoginWindow_Username_inputfield=xpath://*[@id='userName']
+LoginWindow_Password_inputfield=xpath://*[@id='password']
+LoginWindow_LoginButton=xpath://*[@id='btnLogin']
+Loginpage_backgroundImage=xpath://div[@class='login-background']
+LoginWindow_UsernamePlaceholder=xpath:.//*[@placeholder='Username']
+LoginWindow_PasswordPlaceholder=xpath:.//*[@placeholder='Password']
+LoginWindow_Accountlogo=xpath:.//img[contains(@src,'loginlogo.png')]
+LoginWindow_ForgotPasswordLink=css:.forgot-link
+LoginWindow_RememberMeCheckBox=css:.custom-check-box>label
+LoginWindow_UsernameLabel=xpath:.//label[contains(.,'Username')]
+LoginWindow_PasswordLabel=xpath:.//label[contains(.,'Password')]
+LoginWindow_Password_wrapper=xpath:.//img[contains(@src,'eye')]
 
 
 #Home Page Locators
@@ -49,13 +49,18 @@ homepage_recentOnlineTabCount=xpath:.//li[contains(.,'Recent Online')]//a
 homepage_upcomingfollowupTabCount=xpath:.//li[contains(.,'Upcoming Followup')]//a
 homepage_upcomingwalkinsTabCount=xpath:.//li[contains(.,'Upcoming Walkins')]//a
 homepage_highpriorityTabCount=xpath:.//li[contains(.,'High Priority')]//a
+#################################################
+Dashboard_RecentNewTabCount=xpath:id("controlled-tab-example-tab-RecentNew")
+Dashboard_RecentOnlineTabCount=xpath:id("controlled-tab-example-tab-RecentOnline")
+Dashboard_UpcomingfollowupTabCount=xpath:id("controlled-tab-example-tab-UpcomingFollowup")
+Dashboard_UpcomingwalkinsTabCount=xpath:id("controlled-tab-example-tab-PersonalVisit")
+Dashboard_HighpriorityTabCount=xpath:id("controlled-tab-example-tab-HighPriority")
 
 
 #Add Lead Panel Locators - Lead Details Tab
 addLead_firstNameBox=id:firstName
 addLead_emailBox=id:email
 addLead_plusIcon=id:add-new-lead
-homepage_addLeadPlusIcon=css:#add-new-lead>img
 addLead_mobileNumber=id:mobile
 addLead_RHSPanel_AddLeadButton=id:btnAddLead
 
@@ -67,8 +72,6 @@ addActivtyButton=xpath:.//button[contains(@value,'Add')]
 
 
 #Add Lead Panel Locators - Candidate Details Tab
-
-
 
 #Add Lead Panel Locators - Application Details Tab
 
@@ -84,4 +87,58 @@ forgotPassword_ResetPasswordSuccessMessage=xpath:.//div[contains(text(),'follow 
 forgotPassword_ResetPasswordFailureMessage=xpath:.//div[contains(text(),'does not recognize')]
 forgotPassword_ForgotPasswordButton=xpath:.//a[contains(text(),'Forgot Password')]
 forgotPassword_LoginButtonOnPasswordRecovery=xpath:.//a[contains(@class,'submButn')]
+
+#Global Icons
+Go_button_globalSearchBar=xpath:.//div[contains(text(),'GO')]
+LenseIcon_GlobalSearchBar=xpath:.//i[contains(@class,'search-icon')]
+Placeholder_GlobalSearchBar=xpath:.//input[@placeholder='Search by Name, Email or Mobile']
+Header_OutstandingActivityIcon=xpath:.//span[contains(@title,'Pending Activities')]
+Header_OutstandingActivityCount=xpath:.//span[contains(@class,'count-number')]
+Header_CounserlorName=xpath:.//span[contains(@class,'welcome')]
+Header_CounselorPhoto=xpath:.//img[contains(@src,'/styles/images/user-img.png')]
+Header_SignOutLink=xpath:.//img[contains(@alt,'SignOut')]
+Header_CompanyLogo=xpath:.//img[contains(@src,'dashboardlogo.png')]
+JoyRide_Button=xpath:.//img[contains(@src,'joyride-start.png')]
+AddLeadPlusIcon=css:#add-new-lead>img
+BulkUpload_Icon=id:upload-new-lead
+
+#LHS Panel Tabs
+UpcomingTaks_Tab=xpath:.//span[contains(text(),'Upcoming Task')]
+UpcomingTask_TabIcon=xpath:.//img[contains(@src,'icon-home-selected.png')]
+LeadList_Tab=xpath:.//span[contains(text(),'Lead List')]
+LeadList_TabIcon=xpath:.//img[contains(@src,'Icon_Lead_List.png')]
+MyActivities_Tab=xpath:.//span[contains(text(),'My Activities')]
+MyActivities_TabIcon=xpath:.//img[contains(@src,'icon-my-activity.png')]
+FailedList_Tab=xpath:.//span[contains(text(),'Failed List')]
+FailedList_TabIcon=xpath:.//img[contains(@src,'icon_fail_leads.png')]
+Campaign_Tab=xpath:.//span[contains(text(),'Campaign')]
+Campaign_TabIcon=xpath:.//img[contains(@src,'campaign_Black.png')]
+Reports_Tab=xpath:.//span[contains(text(),'Reports')]
+Reports_TabIcon=xpath:.//img[contains(@src,'reports_Black.png')]
+Settings_Tab=xpath:.//span[contains(text(),'Settings')]
+Settings_TabIcon=xpath:.//img[contains(@src,'settings_Black.png')]
+
+#Lead List Page
+LeadListPage_AllTab=xpath:id("controlled-tab-example-tab-All")
+LeadListPage_NewTab=xpath:id("controlled-tab-example-tab-New")
+LeadListPage_CallBackTab=xpath:id("controlled-tab-example-tab-CallBack")
+LeadListPage_WalkinTab=xpath:id("controlled-tab-example-tab-Walkin")
+LeadListPage_EnrolledTab=xpath:id("controlled-tab-example-tab-Enrolled")
+LeadListPage_ClosedTab=xpath:id("controlled-tab-example-tab-Closed")
+LeadListPage_OnlineTab=xpath:id("controlled-tab-example-tab-Online")
+LeadListPage_ReferredFromMeTab=xpath:id("controlled-tab-example-tab-ReferredFromMe")
+LeadListPage_Campaign=xpath:id("leadlist-step1")
+LeadListPage_CampaignIcon=xpath:.//img[contains(@src,'Campaign.png')]
+LeadListPage_Refer=xpath:id("leadlist-step2")
+LeadListPage_ReferIcon=xpath:.//img[contains(@src,'icon_refer.svg')]
+LeadListPage_SendSMSToAll=xpath:id("leadlist-step3")
+LeadListPage_SendSMSToAllIcon=xpath:.//img[contains(@src,'icon_sms.svg')]
+LeadListPage_SendEmailToAll=xpath:id("leadlist-step4")
+LeadListPage_SendEmailToAllIcon=xpath:.//img[contains(@src,'icon_email.svg')]
+LeadListPage_Refresh=xpath:id("leadlist-step5")
+LeadListPage_RefreshIcon=xpath:.//img[contains(@src,'refresh-icon.png')]
+LeadListPage_DownloadLeads=xpath:id("leadlist-step6")
+LeadListPage_DownloadLeadsIcon=xpath:.//img[contains(@src,'icon-download-white.svg')]
+LeadListPage_Filter=xpath:id("leadlist-step7")
+LeadListPage_FilterIcon=xpath:.//img[contains(@src,'icon_filter_white.png')]
 
