--- a/EE_Web/src/whitefeather/xedge/appconfig/Locators.properties
+++ b/EE_Web/src/whitefeather/xedge/appconfig/Locators.properties
@@ -69,6 +69,7 @@ select_activityType_dropdown1=xpath:.//span[contains(@class,'Select-multi-value-
 select_activityType_dropdown2=xpath://*[@id="react-select-3--value"]/div[1]
 select_activityType_dropdown=xpath:.//div[text()='Select Activity Type']
 addActivtyButton=xpath:.//button[contains(@value,'Add')]
+AddActivityCommentBox=id:activityComment
 
 
 #Add Lead Panel Locators - Candidate Details Tab
@@ -89,6 +90,7 @@ forgotPassword_ForgotPasswordButton=xpath:.//a[contains(text(),'Forgot Password'
 forgotPassword_LoginButtonOnPasswordRecovery=xpath:.//a[contains(@class,'submButn')]
 
 #Global Icons
+GLobal_SeachBar=xpath:.//form[contains(@class,'navbar-form')]
 Go_button_globalSearchBar=xpath:.//div[contains(text(),'GO')]
 LenseIcon_GlobalSearchBar=xpath:.//i[contains(@class,'search-icon')]
 Placeholder_GlobalSearchBar=xpath:.//input[@placeholder='Search by Name, Email or Mobile']
@@ -101,6 +103,7 @@ Header_CompanyLogo=xpath:.//img[contains(@src,'dashboardlogo.png')]
 JoyRide_Button=xpath:.//img[contains(@src,'joyride-start.png')]
 AddLeadPlusIcon=css:#add-new-lead>img
 BulkUpload_Icon=id:upload-new-lead
+CloseIconRHSPanels=xpath:.//img[contains(@src,'icon-close-big.png')]
 
 #LHS Panel Tabs
 UpcomingTaks_Tab=xpath:.//span[contains(text(),'Upcoming Task')]
