--- a/EE_Web/.classpath
+++ b/EE_Web/.classpath
@@ -16,5 +16,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="F:/Users/Shekhar.DESKTOP-TMQM6DS/EESupport-WorkSpace/Samples/External_Physical_Bindings/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="F:/Users/Shekhar.DESKTOP-TMQM6DS/EESupport-WorkSpace/Samples/External_Physical_Bindings/json-20171018.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
