--- a/EE_Web/.classpath
+++ b/EE_Web/.classpath
@@ -18,5 +18,7 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="F:/Users/Shekhar.DESKTOP-TMQM6DS/EESupport-WorkSpace/Samples/External_Physical_Bindings/json-simple-1.1.1.jar"/>
 	<classpathentry kind="lib" path="F:/Users/Shekhar.DESKTOP-TMQM6DS/EESupport-WorkSpace/Samples/External_Physical_Bindings/json-20171018.jar"/>
+	<classpathentry kind="lib" path="F:/Users/Shekhar.DESKTOP-TMQM6DS/EE-WorkSpace/ExtraaEdge Web Platform/External_Physical_Bindings/json-20171018.jar"/>
+	<classpathentry kind="lib" path="F:/Users/Shekhar.DESKTOP-TMQM6DS/EE-WorkSpace/ExtraaEdge Web Platform/External_Physical_Bindings/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
